--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "vite --port $PORT",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
@@ -19,10 +20,20 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.192",
+    "@swc/jest": "^0.2.21",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "autoprefixer": "^10.4.7",
+    "enzyme": "^3.11.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-watch-typeahead": "^1.1.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.9"
