--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,12 @@
 version: 2.1
+
+orbs:
+  heroku: circleci/heroku@0.0.10
+
 jobs:
   build:
     docker:
-      - image: circleci/node:10.16.3
+      - image: cimg/node:18.2.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -13,11 +17,12 @@ jobs:
       - run:
           name: Run tests
           command: npm run test
+
 workflows:
   heroku_deploy:
     jobs:
       - build
-      - heroku/deploy-via-git:
+      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
           requires:
             - build
           filters:
